19123003.VCR - VCR control added
			 - Tested and working
			 - SPI controlled VCR using an MCP4151 
			 - Unwanted motion eliminated
			 - Motion smoothed
19123002.VCR - VCR Control branch initial commit
VCR BRANCH CREATED
19123001 - Added C/R low pass filter and tweaked move values
		 - Changed speed multipliers for fixed speed values
		 - Added usage explaination and comments
19122801 - Added X10 / X100 output smoothing
		 - Added single-step
19122703 - #1 Speed scaling added to code
		 - #2 Direction artifacts
19122702 - Decode function completed
19122701 - Bench test complete
19122001 - Initial commit